Code base refactored

--- a/HTML/CSS/JS/index.html
+++ b/HTML/CSS/JS/index.html
@@ -134,6 +134,7 @@
         box.style.left = (boxPos.left - step) + 'px';
         }
 
+        // Do move in every second
         setInterval(doMove, 1000);
     </script>
 </body>
